[tool.black]
line-length = 100
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
profile = "black"


[tool.ruff]
extend-exclude = []


[tool.mypy]
python_version = 3.11
explicit_package_bases = true

warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
warn_unused_ignores = false

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

exclude = [
    '^tests/.*$',
    '^build/.*$',
    '^dist/.*$',
    '^.*\.egg-info/.*$',
    '^.*\.egg/.*$',
    "edd/_version.py$",
]

[tool.pyright]
include = []
exclude = []
strict = []

reportUntypedFunctionDecorator = false
pythonVersion = "3.11"
pythonPlatform = "Linux"


[tool.pytest.ini_options]
testpaths = ["./tests/"]
filterwarnings = ["ignore::DeprecationWarning:mlflow:", "ignore::DeprecationWarning:pydantic:"]


[project]
name = "test-comfy-ui"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "pillow>=11.2.1",
    "pip>=25.0.1",
    "websocket>=0.2.1",
    "websocket-client>=1.8.0",
]
authors = [
    { name = "Clement Wang", email = "clementwang.pro@gmail.com" },
]
readme = "README.md"


[dependency-groups]
dev = [
    "ruff>=0.9.6",
    "isort>=5.13.2",
    "black>=24.8.0",
    "mypy>=1.14.1",
    "pyright>=1.1.394",
    "pandas-stubs>=2.0.3.230814",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "coverage>=7.6.12",
    "types-pyyaml>=6.0.12.20241230",
]
